# docs/swagger.json
@@ -42,7 +42,7 @@
                     },
                     {
                         "type": "integer",
-                        "description": "Page size (default: 10)",
+                        "description": "Page size (default: 25)",
                         "name": "size",
                         "in": "query"
                     }
@@ -237,6 +237,23 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/logout": {
+            "get": {
+                "description": "Removes the users session cookie if exists.",
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Logout user session",
+                "responses": {
+                    "302": {
+                        "description": "Redirects to root page",
                         "schema": {
                             "type": "string"
                         }
@@ -815,54 +832,6 @@
                 }
             }
         },
-        "/syllabi/{syllabusId}/sync": {
-            "get": {
-                "security": [
-                    {
-                        "AWS": []
-                    }
-                ],
-                "tags": [
-                    "Syllabus"
-                ],
-                "summary": "Sync a syllabus",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Syllabus ID",
-                        "name": "syllabusId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content",
-                        "schema": {
-                            "type": "string"
-                        },
-                        "headers": {
-                            "Location": {
-                                "type": "string",
-                                "description": "URL to access the synced syllabus"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/users/{userId}": {
             "get": {
                 "security": [
@@ -986,8 +955,7 @@
                     }
                 ],
                 "tags": [
-                    "User",
-                    "Course"
+                    "User"
                 ],
                 "summary": "List user courses",
                 "parameters": [
@@ -1029,7 +997,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Course"
+                                "$ref": "#/definitions/model.UserCourse"
                             }
                         }
                     },
@@ -1048,8 +1016,7 @@
                     }
                 ],
                 "tags": [
-                    "User",
-                    "Course"
+                    "User"
                 ],
                 "summary": "Add a user course",
                 "parameters": [
@@ -1112,8 +1079,7 @@
                     }
                 ],
                 "tags": [
-                    "User",
-                    "Course"
+                    "User"
                 ],
                 "summary": "Delete a user course",
                 "parameters": [
@@ -1172,8 +1138,7 @@
                     }
                 ],
                 "tags": [
-                    "User",
-                    "Course"
+                    "User"
                 ],
                 "summary": "Update a user course",
                 "parameters": [
@@ -1483,15 +1448,29 @@
                     "type": "string"
                 }
             }
+        },
+        "model.UserCourse": {
+            "type": "object",
+            "properties": {
+                "course": {
+                    "type": "string"
+                },
+                "courseId": {
+                    "type": "string"
+                },
+                "semesterTaken": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "yearTaken": {
+                    "type": "integer"
+                }
+            }
         }
     },
     "securityDefinitions": {
-        "AWS": {
-            "description": "Provide a valid Bearer token. Example: \"Bearer {jwt-token}\"",
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
-        },
         "Session": {
             "type": "apiKey",
             "name": "syllabye.session",
